# myfreeswitch

./: Freeswitch.2017.sln  Freeswitch.PTT.Minimal.2017.slnf  Freeswitch.cpp.slnf  Makefile.am  Readme.md  bootstrap.sh  build-ptt-minimal-linux.sh  build-ptt-minimal.cmd  configure.ac  msbuild.cmd
.github/skills/freeswitch-ptt-demo/: SKILL.md
MicroSIP-3.22.3_A/: microsip.ini
MicroSIP-3.22.3_B/: microsip.ini
conf/vanilla/dialplan/: default.xml
docs/: freeswitch-ai-bot-realtime.md  freeswitch-ai-bot-route-analysis.md  ptt-esl-control-flow.md  ptt-half-duplex-design.md  ptt-implementation-analysis.md  ptt-java-monitor-jni.md  ptt-linux-minimal-build.md  ptt-softphone-quickstart.md  ptt-training-demo.md  ptt-training-exec-5min.md  ptt-training-live-script.md  ptt-vs-minimal-build.md
java/ptt-monitor/: pom.xml  run-all.ps1  run-monitor.ps1  smoke-http.ps1  switch-api-mode.ps1  test-query.ps1
java/ptt-monitor/sql/: init.sql
java/ptt-monitor/src/main/native/: CMakeLists.txt  ptt_jni_bridge.cpp
libs/apr-util/: buildconf
libs/esl/: fs_cli.2017.vcxproj
libs/esl/managed/: esl.2017.vcxproj
libs/libdingaling/: libdingaling.2017.vcxproj
libs/libteletone/: libteletone.2017.vcxproj
libs/libvpx/: configure  libs.mk
libs/libzrtp/: bootstrap.sh
libs/srtp/: config.hw  libsrtp.2017.vcxproj
src/: switch_core_db.c  switch_core_media.c  switch_core_sqldb.c
tests/unit/: test_switch_core.2017.vcxproj  test_switch_core_codec.2017.vcxproj
w32/: libwebsockets.props  yasm.props
w32/Console/: FreeSwitchConsole.2017.vcxproj
w32/Setup/: Setup.2017.wixproj
(+222 files in other folders)
